@@ -3,7 +3,6 @@ package org.bme.micro_futar.logistics.services;
 import lombok.RequiredArgsConstructor;
 import org.bme.micro_futar.logistics.dtos.DepoDTO;
 import org.bme.micro_futar.logistics.entities.Depo;
-import org.bme.micro_futar.logistics.kafka.KafkaProducerService;
 import org.bme.micro_futar.logistics.mappers.DepoMapper;
 import org.bme.micro_futar.logistics.repositories.DepoRepository;
 import org.springframework.stereotype.Service;
@@ -11,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,12 +17,11 @@ public class DepoService {
 
     private final DepoRepository depoRepository;
     private final DepoMapper depoMapper;
-    private final KafkaProducerService kafkaProducerService;
 
     public List<DepoDTO> getAllDepos() {
         return depoRepository.findAll().stream()
                 .map(depoMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<DepoDTO> getDepoById(Long id) {
@@ -46,7 +43,7 @@ public class DepoService {
         }
 
         return depoRepository.findById(id)
-                .map(existingDepo -> {
+                .map(_ -> {
                     Depo updatedDepo = depoMapper.toEntity(depoDTO);
                     updatedDepo.setId(id);
                     Depo savedDepo = depoRepository.save(updatedDepo);
